--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,3 @@
-.*
-!.gitignore
-*~
-*.orig
-*.log
-*.run
-*.tgz
-*.xz
-*.pkg
-*.bak
-*.tar.gz
-*.tar.zst
-*.old
-*.db
-*.files
-src/
-pkg/
 package-list/
-
-setup-git-v5.sh
+setup-git.sh
 up.sh
